<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDisplay"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <EditText
        android:id="@+id/titleText"
        android:hint="@string/noTitle"
        style="@style/EditUIEditText">
    </EditText>
    <EditText
        android:id="@+id/decriptionText"
        android:hint="@string/noText"
        style="@style/EditUIEditText">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:gravity="center">
            <ImageView
                android:id="@+id/theImage"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height">
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="20">
            <Button
                android:text="@string/gallery"
                android:id="@+id/gallery"
                android:visibility="invisible"
                style="@style/CameraGalleryButton">
            </Button>
            <Button
                android:text="@string/camera"
                android:id="@+id/camera"
                style="@style/CameraGalleryButton">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:padding="@dimen/layout_padding">
        <TextView
            android:id="@+id/date"
            style="@style/EditUIDataText">
        </TextView>
        <TextView
            android:id="@+id/location"
            style="@style/EditUIDataText">
        </TextView>
        <TextView
            android:id="@+id/address"
            style="@style/EditUIDataText">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/layout_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/save"
            android:id="@+id/save"
            style="@style/SaveDeleteButton">
        </Button>
        <Button
            android:text="@string/delete"
            android:id="@+id/delete"
            style="@style/SaveDeleteButton">
        </Button>
    </LinearLayout>
</LinearLayout>